--- a/views/templates/episode.html
+++ b/views/templates/episode.html
@@ -1,6 +1,6 @@
 <div class="col-md-6">
 	<div class="well result entry">
-		<div class="row">
+		<div class="row entry-header">
 			<a href="/episode/{{ episode.guid | urlencode }}" title="{{ episode.title }}">
                 <h3 class="name">{{ episode.title }}</h3>
             </a>
