--- a/views/templates/podcast.html
+++ b/views/templates/podcast.html
@@ -1,6 +1,6 @@
 <div class="col-md-6">
 	<div class="well result entry">
-		<div class="row">
+		<div class="row entry-header">
 			<a href="/podcast/{{ podcast.name | urlencode}}">
 				<h3 class="name">{{ podcast.name }}</h3>
 			</a>
