--- a/views/layout.html
+++ b/views/layout.html
@@ -53,12 +53,14 @@
     <body id="#deboot">
 	    <div class="container" style="height:100%">
 	    	<nav class="navbar navbar-default" id="header">
-  	    		<div class="container-fluid">
-        			<div class="navbar-header">
-						<a class="navbar-brand" href="/"><i class="fas fa-microchip"></i></a>
-        			</div>
+  	    		<div class="">
+					<a class="navbar-brand" href="/"><i class="fas fa-microchip"></i></a>
+                    
+                    <a class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-menu" aria-controls="nav-menu" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-bars"></i>
+                    </a>
 
-        			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        			<div class="collapse navbar-collapse" id="nav-menu">
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="/podcasts" class="nav-text">Podcasts</a></li>
 
@@ -81,8 +83,8 @@
               					</div>
             				</div>
           				</form>
-        			</div><!-- /.navbar-collapse -->
-  	    		</div><!-- /.container-fluid -->
+        			</div>
+  	    		</div>
 	    	</nav>
 
 	    	<div class="row">
@@ -96,7 +98,7 @@
             <p>&copy;Sean Haas, 2020</p>
         </footer>
 
-        <div class="corner-ribbon top-left sticky blue shadow">
+        <div class="share-ribbon corner-ribbon top-left sticky blue">
             <div class="share share-fb">
                 <a href="https://www.facebook.com/sharer.php" onclick="window.open(this.href, 'mywin','left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"><i class="fab fa-facebook-f fa-2x"></i></a>
             </div>
