--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,12 +40,22 @@
         float: right;
         margin: 20px;
     }
+
+    .navbar-collapse:before, .nav:before{
+        display: none;
+    }
 }
 
 @media (min-width: 750px){
     .navbar-toggler{
         display: none;
     }
+}
+
+#nav-menu{
+    margin-top: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 body {
