--- a/views/layout.html
+++ b/views/layout.html
@@ -60,7 +60,7 @@
                         <i class="fas fa-bars"></i>
                     </a>
 
-        			<div class="collapse navbar-collapse" id="nav-menu">
+        			<div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="/podcasts" class="nav-text">Podcasts</a></li>
 
@@ -84,7 +84,32 @@
             				</div>
           				</form>
         			</div>
-  	    		</div>
+                </div>
+                  
+                <div class="collapse" id="nav-menu">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <a href="/podcasts" class="nav-text"><h4>All Podcasts</h4></a>
+                        </div>
+
+                        <div class="col-md-6">
+                            <a href="/" class="nav-text"><h4>New Episodes</h4></a>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <form action="/search">
+                			    <div class="form-group" style="display:inline;">
+                      				<div class="input-group" style="display:table;">
+                        				<input class="form-control" name="q" placeholder="Search Here" autocomplete="off" autofocus="autofocus" type="text" value="{{ query }}">
+                        				<span class="input-group-addon" style="width:1%;"><span class="glyphicon glyphicon-search"></span></span>
+                  	    			</div>
+            	    	    	</div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
 	    	</nav>
 
 	    	<div class="row">
