--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,10 @@
 			<div class="col-md-12">
 				<div class="well">
 					<h2>Welcome to Old Computer Podcasts</h2>
-					<p>The only online repository for audio about antiquated technology.</p>
+                    
+                    <p>The only online repository for audio about antiquated technology. Here you can find all the best podcasts covering the history of computers, their evolution, and where old technology lives in the modern day.</p>
+                    
+                    <p>Recent episodes:</p>
 				</div>
 			</div>
 		</div>
@@ -26,24 +29,5 @@
                 {% include "templates/episode.html" ignore missing %}
             {% endfor %}
 		</div>
-
-		<div class="row">
-			<div class="col-md-12">
-				<div class="tags well">
-				</div>
-			</div>
-		</div>
 	</div>
-
-	<script>
-		$.get('/tags', function(d){
-			d.forEach(function(tag){
-				$(".tags").append(
-					"<a href='/tags/" + tag.tag + "'><div class='tag label label-default'>" +
-						tag.tag + ":" + tag.count +
-					"</div></a>"
-				);
-			});
-		});
-	</script>
 {% endblock %}
