changes to icons

--- a/views/about.html
+++ b/views/about.html
@@ -15,7 +15,7 @@
 
                     <ul>
                         <li>I am doing this in my spare time, so bug reports will be fixed at my leasure. You can report problems on <a href="https://github.com/WizardOfHaas/oldcomputerpods/issues">github</a>.</li>
-                        <li>I'm not modifying, downloading, or re-hosting anyone's content. All this site does is scrape RSS feeds and add some extra data. Images, any audio, and links are grabbed verbatum from feeds.</li>
+                        <li>I'm not modifying, downloading, or re-hosting anyone's content. All this site does is scrape RSS feeds and add some extra data. Images, any audio, and links are grabbed verbatum from feeds. That means that my scraper won't artificall inflate download counts.</li>
                         <li>Everyhting is automated by some smart software, but things still go wrong. If tags, links, or images are missing then there was probably some issue while scraping data. Some APIs I'm polling don't always play nice.</li>
                         <li>There is no fancy algorythim, stuff is sorted either alphabeticaly or by pub date. If you want your podcast to show up first then name it something like "#######" and publish every day.</li>
                     </ul>
