--- a/views/layout.html
+++ b/views/layout.html
@@ -5,8 +5,15 @@
     	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <!--<link rel="icon" type="image/jpg" href="" sizes="32x32">-->
 
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+        
         {% if req %}
         <meta property="og:url" content="{{ req.protocol + '://' + req.get('host') + req.originalUrl }}">
         <meta property="twitter:url" content="{{ req.protocol + '://' + req.get('host') + req.originalUrl }}">
@@ -54,7 +61,10 @@
 	    <div class="container" style="height:100%">
 	    	<nav class="navbar navbar-default" id="header">
   	    		<div class="">
-					<a class="navbar-brand" href="/"><i class="fas fa-microchip"></i></a>
+                    <a class="navbar-brand" href="/">
+                        <!--<i class="fas fa-microchip"></i>-->
+                        <img src="/images/big_disk.svg" style="width:32px;margin-top:-5px">
+                    </a>
                     
                     <a class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-menu" aria-controls="nav-menu" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fas fa-bars"></i>
