https, layout fixes

--- a/views/templates/episode.html
+++ b/views/templates/episode.html
@@ -9,13 +9,13 @@
 		</div>
 
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-sm-6">
 				<a href="/episode/{{ episode.guid | urlencode }}">
 					<img class="podcast-logo" src="{{ episode.image  }}">
                 </a>
 			</div>
 
-			<div class="col-md-6 description">
+			<div class="col-sm-6 description">
 				<p>{{ episode.description }}</p>
 			</div>
 	
