--- a/views/layout.html
+++ b/views/layout.html
@@ -143,6 +143,8 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="tags"></div>
+
+					            <p><a href="https://github.com/WizardOfHaas/oldcomputerpods">(OldComputerPods)</a> &copy;Sean Haas, 2020</p>
                             </div>
                         </div>
 	    			</div>
@@ -151,9 +153,7 @@
 	    </div>
 
         <footer class="footer text-muted text-right">
-            <p><a href="https://github.com/WizardOfHaas/oldcomputerpods">(OldComputerPods)</a> b1</p>
-            <p>&copy;Sean Haas, 2020</p>
-        </footer>
+       </footer>
 
         <div class="share-ribbon corner-ribbon top-left sticky blue">
             <div class="share share-fb">
