--- a/views/templates/podcast.html
+++ b/views/templates/podcast.html
@@ -8,13 +8,13 @@
 		</div>
 
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-sm-6">
 				<a href="/podcast/{{ podcast.name | urlencode}}">
 					<img class="podcast-logo" src="{{ podcast.image  }}">
 				</a>
 			</div>
 
-			<div class="col-md-6">
+			<div class="col-sm-6">
                 <div class="row">
                     <p>{{ podcast.description }}</p>
                 </div>
