--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="well">
-					<h2>Welcome to Old Computer Podcasts</h2>
+					<h2>Old Computer Podcasts - Find Shows About Computing's Past</h2>
                     
                     <p>The only online repository for audio about antiquated technology. Here you can find all the best podcasts covering the history of computers, their evolution, and where old technology lives in the modern day.</p>
                     
