--- a/views/layout.html
+++ b/views/layout.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-    	<title>{{ title }} - Old Computer Podcasts</title>	
+    	<title>{{ page_title if page_title else title }} - Old Computer Podcasts</title>	
 
     	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta charset="utf-8">
