fixed index card

--- a/views/episode.html
+++ b/views/episode.html
@@ -34,7 +34,7 @@
 
 		    	<div class="col-md-8">
                     <div class="row">
-                        <audio controls>
+                        <audio controls id="player">
                             <source src="{{ media }}">
                         </audio>
                     </div>
