--- a/views/episode.html
+++ b/views/episode.html
@@ -26,7 +26,7 @@
             <div class="row">
                 <h2 class="name">{{ fullTitle }}</h2>
 
-		    	&nbsp;&nbsp;&nbsp;&nbsp;<a href="/podcast/{{ podcast.name }}">{{ podcast.name }}</a> {{ pubDate.toLocaleDateString("en-US") }}
+		    	&nbsp;&nbsp;&nbsp;&nbsp;<a href="/podcast/{{ podcast.name | urlencode }}">{{ podcast.name }}</a> {{ pubDate.toLocaleDateString("en-US") }}
 		    </div>
 
 		    <div class="row">
