playlist working, still need to add way to build it

--- a/views/playlist.html
+++ b/views/playlist.html
@@ -4,48 +4,26 @@
 	<div class="col-md-12">
 		<div class="row">
 			<div class="col-md-12">
-				<div class="well">
+				<div class="well" style="padding:0px">
                     {{ message }}
-                    
-                    <div id="player-holder">
-                        <div id="player"></div>
-                    </div>
 
-                    <h2>Episodes in this Playlist</h2>
+                    {% include "templates/player.html" %}
 				</div>
 			</div>
-		</div>
-
-		<div class="row">
-            {% for episode in episodes %}
-                {% include "templates/episode.html" ignore missing %}
-            {% endfor %}
 		</div>
     </div>
     
     <script>
-        /*var myPlaylist = new jPlayerPlaylist(
-            {
-                jPlayer: "#player",
-                cssSelectorAncestor: "#player-holder"
-            },[],{
-                swfPath: "https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/jplayer/jquery.jplayer.swf",
-                supplied: "ogv, m4v, oga, mp3",
-                smoothPlayBar: false,
-                keyEnabled: true
-            }
-        );
+        let bandcampLinks = document.getElementsByClassName('bandcamp-link');
 
-        {% for episode in episodes %}
-            myPlaylist.add({
-                title: "{{ episode.title }}",
-                artist: "{{ episode.podcast.name }}",
-                mp3: "{{ episode.media }}",
-                poster: "{{ episode.image }}"
+        for( var i = 0; i < bandcampLinks.length; i++ ){
+            bandcampLinks[i].addEventListener('click', function(e){
+                e.stopPropagation();
             });
-        {% endfor %}*/
+        }
 
-
-        
+        Amplitude.init({
+            "songs": {{ playlist | dump }}
+        });
     </script>
 {% endblock %}
